# python-postgres-inspect

./: .env.sample  README.md  logging.conf.yml  pyproject.toml
sample/dvdrental/: ddl.sql
src/postgres_inspect/: __init__.py  __main__.py  db.py  settings.py
