[tool.poetry]
name = "postgres-inspect"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["postgresql"], version = "^2.0.17"}
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
pyyaml = "^6.0"

[tool.poetry.scripts]
postgres-inspect = "postgres_inspect.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
